[package]
name = "dioxus_fullstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]

[dependencies]
dioxus = "^0.4.0"
dioxus-fullstack = "^0.4.1"
chrono = { version = "^0.4.31" , features = ["serde"]}
serde = "^1.0.189"
